clusters/talos/apps/development/news-reader/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: news-reader
  namespace: news-reader
  labels:
    external-dns: 'true'
  annotations:
    external-dns.alpha.kubernetes.io/target: vanillax.me
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-external
    namespace: gateway
    sectionName: https
  hostnames:
  - news.vanillax.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - group: ''
      kind: Service
      name: news-reader
      port: 3000
      weight: 1
